--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,3 +40,10 @@ jobs:
 
       # run tests!
       - run: ./gradlew build
+
+      # run sonar:
+      - ./gradlew sonarqube \
+        -Dsonar.projectKey=interceptor2048_project-jdp-1903-03 \
+        -Dsonar.organization=interceptor2048-github \
+        -Dsonar.host.url=https://sonarcloud.io \
+        -Dsonar.login=19dcd8ea2675ec422cf4cadec97927ee84b27bec
