--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
+plugins {
+    id "org.sonarqube" version "2.7"
+}
+
 group = 'com.kodilla'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
