--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,13 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7")
     }
 }
 
@@ -14,10 +18,8 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.sonarqube'
 
-plugins {
-    id "org.sonarqube" version "2.7"
-}
 
 group = 'com.kodilla'
 version = '0.0.1-SNAPSHOT'
