--- a/build.gradle
+++ b/build.gradle
@@ -37,5 +37,5 @@ dependencies {
     
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     implementation('mysql:mysql-connector-java')
-    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
+    implementation('org.projectlombok:lombok')
 }
