--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,3 +41,6 @@ jobs:
 
       # run tests!
       - run: ./gradlew build
+      # run sonar:
+      - run: ./gradlew sonarqube -Dsonar.projectKey=adrianpaz_JDP-1903-01 -Dsonar.organization=adrianpaz-github -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=c20f070208d9ca9d68d638735e71935ecd1ac602
+
