--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     compileOnly 'org.projectlombok:lombok:1.18.6'
 	annotationProcessor 'org.projectlombok:lombok:1.18.6'
+    compile ('mysql:mysql-connector-java')
 }
