--- a/build.gradle
+++ b/build.gradle
@@ -23,14 +23,15 @@ repositories {
     mavenCentral()
 }
 
-
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
     runtimeOnly('com.h2database:h2')
-    compile ('mysql:mysql-connector-java')
+    compile('mysql:mysql-connector-java')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     compileOnly 'org.projectlombok:lombok:1.18.6'
-	  annotationProcessor 'org.projectlombok:lombok:1.18.6'
-    compile ('mysql:mysql-connector-java')
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+    compile('mysql:mysql-connector-java')
+    compile 'io.springfox:springfox-swagger2:2.7.0'
+    compile 'io.springfox:springfox-swagger-ui:2.7.0'
 }
