--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     runtimeOnly('com.h2database:h2')
     compile ('mysql:mysql-connector-java')
+    compileOnly 'org.projectlombok:lombok:1.18.6'
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
