--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,11 @@ repositories {
 
 
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+//    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
     runtimeOnly('com.h2database:h2')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    compile 'mysql:mysql-connector-java'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
 }
