--- a/build.gradle
+++ b/build.gradle
@@ -28,4 +28,8 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     runtimeOnly ('mysql:mysql-connector-java')
     runtimeOnly('com.h2database:h2')
+    compileOnly 'org.projectlombok:lombok:1.18.6'
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+    
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
