--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,11 @@ repositories {
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
-    runtimeOnly ('mysql:mysql-connector-java')
     runtimeOnly('com.h2database:h2')
-    compileOnly 'org.projectlombok:lombok:1.18.6'
-    annotationProcessor 'org.projectlombok:lombok:1.18.6'
-    
+    compile ('mysql:mysql-connector-java')
+    compileOnly ('org.projectlombok:lombok:1.18.6')
+    annotationProcessor ("org.projectlombok:lombok:1.18.6")
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    compileOnly (group: 'org.projectlombok', name: 'lombok', version: '1.18.6')
+    annotationProcessor ('org.projectlombok:lombok:1.18.6')
 }
