--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/kodilla_project?serverTimezone=Europe/Warsaw&useSSL=False
-spring.datasource.username=kodilla_user
+spring.datasource.username=kodilla_group
 spring.datasource.password=kodilla_password
 
 spring.jpa.database=mysql
