--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,8 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     compile 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    //Swagger
+    compile('io.springfox:springfox-swagger2:2.9.2')
+    compile('io.springfox:springfox-swagger-ui:2.9.2')
 }
