--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
     runtimeOnly('com.h2database:h2')
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
+
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
