[JDP191101-4] Uzupełniono kontroler klasy Order. Dodano serwis, repozytorium, Dto oraz mapper.

--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,13 @@ repositories {
 
 
 dependencies {
+
+    compile 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
     runtimeOnly('com.h2database:h2')
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
+
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
