--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
