--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ repositories {
 }
 
 dependencies {
+    compile('io.springfox:springfox-swagger2:2.7.0') 
+    compile('io.springfox:springfox-swagger-ui:2.7.0')
     compile 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
