--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     runtimeOnly('com.h2database:h2')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     compile ('mysql:mysql-connector-java')
+    compileOnly('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
 }
