--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/kodilla_project?serverTimezone=Europe/Warsaw&allowPublicKeyRetrieval=true&useSSL=False
 spring.datasource.username=kodilla_user
 spring.datasource.password=kodilla_password
+spring.main.allow-bean-definition-overriding=true
 
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
