Task JDP210403-16 - Order test for saving in repo added

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     runtimeOnly('mysql:mysql-connector-java')
     runtimeOnly('com.h2database:h2')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
 
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
