adding endpoints of GroupController

--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     runtimeOnly('com.h2database:h2')
     implementation('com.mysql:mysql-connector-j:8.0.32')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 }
