--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
     runtimeOnly('com.h2database:h2')
+    implementation('com.mysql:mysql-connector-j:8.0.32')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
