--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,6 @@ dependencies {
     runtimeOnly('com.h2database:h2')
     implementation('com.mysql:mysql-connector-j:8.0.32')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
-    compileOnly 'org.projectlombok:lombok:1.18.26'
-    annotationProcessor 'org.projectlombok:lombok:1.18.26'
-
+    compileOnly ('org.projectlombok:lombok:1.18.26')
+    annotationProcessor ('org.projectlombok:lombok:1.18.26')
 }
